[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Matthieu Gallet <github@19pouces.net>"]
classifiers = [
  'Development Status :: 5 - Production/Stable',
  'License :: OSI Approved :: CEA CNRS Inria Logiciel Libre License, version 2.1 (CeCILL-2.1)',
  'Operating System :: POSIX :: Linux',
  'Operating System :: Unix',
  'Natural Language :: English',
  'Natural Language :: French',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Programming Language :: Python :: 3.13',
  'Programming Language :: Python :: 3.14'
]
description = "Basic protocol to send files using the hairgap binary ( github.com/cea-sec/hairgap )."
documentation = 'https://github.com/d9pouces/hairgap'
license = "CeCILL-B"
maintainers = ["Matthieu Gallet <github@19pouces.net>"]
name = "hairgap"
packages = [{include = "hairgap"}]
readme = "README.md"
repository = 'https://github.com/d9pouces/hairgap'
version = "1.2.3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
coverage = "^7.6.7"
pytest = "^8.3.3"

[tool.poetry.scripts]
pyhairgap = 'hairgap.cli:main'
